@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.integrations.standardtest.source;
@@ -13,6 +13,7 @@ import io.airbyte.commons.json.Jsons;
 import io.airbyte.db.Database;
 import io.airbyte.protocol.models.AirbyteMessage;
 import io.airbyte.protocol.models.AirbyteMessage.Type;
+import io.airbyte.protocol.models.AirbyteStateMessage;
 import io.airbyte.protocol.models.AirbyteStream;
 import io.airbyte.protocol.models.CatalogHelpers;
 import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
@@ -22,6 +23,7 @@ import io.airbyte.protocol.models.Field;
 import io.airbyte.protocol.models.JsonSchemaType;
 import io.airbyte.protocol.models.SyncMode;
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -42,7 +44,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
 
   private static final Logger LOGGER = LoggerFactory.getLogger(AbstractSourceDatabaseTypeTest.class);
 
-  private final List<TestDataHolder> testDataHolders = new ArrayList<>();
+  protected final List<TestDataHolder> testDataHolders = new ArrayList<>();
 
   /**
    * The column name will be used for a PK column in the test tables. Override it if default name is
@@ -108,7 +110,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
     final List<AirbyteMessage> allMessages = runRead(catalog);
     final Map<String, AirbyteStream> streams = runDiscover().getStreams().stream()
         .collect(Collectors.toMap(AirbyteStream::getName, s -> s));
-    final List<AirbyteMessage> recordMessages = allMessages.stream().filter(m -> m.getType() == Type.RECORD).collect(Collectors.toList());
+    final List<AirbyteMessage> recordMessages = allMessages.stream().filter(m -> m.getType() == Type.RECORD).toList();
     final Map<String, List<String>> expectedValues = new HashMap<>();
     testDataHolders.forEach(testDataHolder -> {
       if (testCatalog()) {
@@ -172,8 +174,6 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
         return null;
       });
     }
-
-    database.close();
   }
 
   /**
@@ -181,7 +181,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
    *
    * @return configured catalog
    */
-  private ConfiguredAirbyteCatalog getConfiguredCatalog() {
+  protected ConfiguredAirbyteCatalog getConfiguredCatalog() {
     return new ConfiguredAirbyteCatalog().withStreams(
         testDataHolders
             .stream()
@@ -192,7 +192,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
                 .withStream(CatalogHelpers.createAirbyteStream(
                     String.format("%s", test.getNameWithTestPrefix()),
                     String.format("%s", getNameSpace()),
-                    Field.of(getIdColumnName(), JsonSchemaType.NUMBER),
+                    Field.of(getIdColumnName(), JsonSchemaType.INTEGER),
                     Field.of(getTestColumnName(), test.getAirbyteType()))
                     .withSourceDefinedCursor(true)
                     .withSourceDefinedPrimaryKey(List.of(List.of(getIdColumnName())))
@@ -242,6 +242,32 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
 
   protected void printMarkdownTestTable() {
     LOGGER.info(getMarkdownTestTable());
+  }
+
+  protected ConfiguredAirbyteStream createDummyTableWithData(final Database database) throws SQLException {
+    database.query(ctx -> {
+      ctx.fetch("CREATE TABLE " + getNameSpace() + ".random_dummy_table(id INTEGER PRIMARY KEY, test_column VARCHAR(63));");
+      ctx.fetch("INSERT INTO " + getNameSpace() + ".random_dummy_table VALUES (2, 'Random Data');");
+      return null;
+    });
+
+    return new ConfiguredAirbyteStream().withSyncMode(SyncMode.INCREMENTAL)
+        .withCursorField(Lists.newArrayList("id"))
+        .withDestinationSyncMode(DestinationSyncMode.APPEND)
+        .withStream(CatalogHelpers.createAirbyteStream(
+            "random_dummy_table",
+            getNameSpace(),
+            Field.of("id", JsonSchemaType.INTEGER),
+            Field.of("test_column", JsonSchemaType.STRING))
+            .withSourceDefinedCursor(true)
+            .withSupportedSyncModes(Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+            .withSourceDefinedPrimaryKey(List.of(List.of("id"))));
+
+  }
+
+  protected List<AirbyteStateMessage> extractStateMessages(final List<AirbyteMessage> messages) {
+    return messages.stream().filter(r -> r.getType() == Type.STATE).map(AirbyteMessage::getState)
+        .collect(Collectors.toList());
   }
 
 }
